--- a/styling/review.scss
+++ b/styling/review.scss
@@ -4,8 +4,20 @@
 .review-modal {
   background-color: #fff;
   padding: 0 1.8rem 1.8rem;
-  border-radius: 5px;
+  border-radius: .313rem;
   width: 25rem;
+}
+
+.review-modal__open {
+  font-size: 1.125rem;
+  color: #fff;
+  background-color: #f2753b;
+  padding: .4rem 1rem;
+}
+
+.review-modal__open:hover {
+  color: #333333;
+  background-color: #d15d28;
 }
 
 .review-modal__close {
@@ -23,7 +35,7 @@
   text-align: center;
   font-size: 1.4rem;
   color: #333333;
-  margin-bottom: 10px;
+  margin-bottom: .625rem;
 }
 
 .review-modal__content {
@@ -42,25 +54,25 @@
 
 .review-form__label {
   font-weight: bold;
-  margin-top: 10px;
+  margin-top: .625rem;
   
 }
 
 .review-form__input {
   width: 100%;
-  padding: 8px;
-  margin-top: 5px;
+  padding: .5rem;
+  margin-top: .313rem;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: .25rem;
 }
 
 .review-form__submit {
-  margin-top: 15px;
-  padding: 10px;
+  margin-top: .938rem;
+  padding: .625rem;
   background-color: #f2753b;
   color: white;
   border: none;
-  border-radius: 4px;
+  border-radius: .25rem;
   cursor: pointer;
 }
 
