--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -43,7 +43,7 @@
         <input class="review-form__input" type="text" id="author" name="author" required />
   
         <!-- Skicka-knapp -->
-        <button class="review-form__submit" type="submit">Skicka</button>
+        <button class="review-form__submit" type="submit">Skicka recensionen</button>
       </form>
   
       <p class="review-modal__message" id="response-message"></p>
